Fix color of h2 and h3  general rule to become more readable and add price to programs on surf academy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 body {
     font-family: lato, sans-serif;
     font-weight: 300;
-    color: #a3a3a3
+    color: #252525
 }
 
 
@@ -52,11 +52,11 @@ h1, h2 {
 }
 
 #section-menu a:hover {
-    border-bottom: 1px solid #a3a3a3;
+    border-bottom: 1px solid #252525;
 }
 
 .active {
-    border-bottom: 1px solid #a3a3a3;
+    border-bottom: 1px solid #252525;
 }
 
 /* HOME - main image and text box*/
